2008-06-10  Nicolas François  <nicolas.francois@centraliens.net>

	* src/sulogin.c: Ignore return value of setlocale(),
	bindtextdomain(), and textdomain().
	* src/sulogin.c: Avoid implicit conversion of pointers / integers
	/ chars to booleans.
	* src/sulogin.c: Avoid assignments in comparisons.
	* src/sulogin.c: Ignore the return value of alarm().

2008-06-10  Nicolas François  <nicolas.francois@centraliens.net>

	* src/groups.c: Use a bool when possible instead of int integers.
	* src/groups.c: Add brackets and parenthesis.
	* src/groups.c: Avoid implicit conversion of pointers / integers
	to booleans.
	* src/groups.c: Avoid assignments in comparisons.
	* src/groups.c: Ignore the return value of putchar(), printf()
	* src/groups.c: Ignore return value of setlocale(),
	bindtextdomain(), and textdomain().

2008-06-10  Nicolas François  <nicolas.francois@centraliens.net>

	* src/grpconv.c: Use a bool when possible instead of int integers.
	* src/grpconv.c: Add brackets and parenthesis.
	* src/grpconv.c: Ignore return value of setlocale(),
	bindtextdomain(), and textdomain().
	* src/grpconv.c: Avoid implicit conversion of pointers / integers
	to booleans.

2008-06-10  Nicolas François  <nicolas.francois@centraliens.net>

	* src/faillog.c: Use a bool when possible instead of int integers.
	* src/faillog.c: Avoid implicit conversion of pointers / integers
	/ chars to booleans.
	* src/faillog.c: Ignore return value of setlocale(),
	bindtextdomain(), and textdomain().
	* src/faillog.c: Add brackets and parenthesis.

2008-06-10  Nicolas François  <nicolas.francois@centraliens.net>

	* src/login.c: Avoid multi-statements lines.
	* src/login.c: Ignore the return value of pam_end() before
	exiting.
	* src/login.c: Use a bool when possible instead of int integers.
	* src/login.c: Add brackets and parenthesis.
	* src/login.c: Ignore the return values of fflush(), putchar(), puts().
	* src/login.c: Ignore the return value of fclose() for read-only
	files.